--- a/Projeto/package.json
+++ b/Projeto/package.json
@@ -40,6 +40,7 @@
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.15.11",
+    "@types/ws": "^8.5.4",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   }
