--- a/Projeto/package.json
+++ b/Projeto/package.json
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/jrmouro/Ary_Jose#readme",
   "dependencies": {
+    "@types/uuid": "^9.0.2",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -32,11 +34,13 @@
     "multer": "^1.4.5-lts.1",
     "tsd": "^0.28.1",
     "typescript": "^5.0.4",
+    "uuid": "^9.0.0",
     "websocket": "^1.0.34",
     "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
     "@types/ip": "^1.1.0",
